--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -20,23 +21,30 @@
         <requestFocus />
     </EditText>
 
-    <EditText
-        android:id="@+id/endDate"
+    <!-- <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/startDate"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="date" />
+        android:layout_alignBottom="@+id/button1"
+        android:layout_marginLeft="23dp"
+        android:layout_toRightOf="@+id/button1"
+        android:text="后台运行" /> -->
 
     <EditText
         android:id="@+id/startDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/endDate"
+        android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/editText1"
-        android:layout_marginTop="31dp"
+        android:ems="10"
+        android:inputType="date" />
+
+    <EditText
+        android:id="@+id/endDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/startDate"
+        android:layout_below="@+id/startDate"
         android:ems="10"
         android:inputType="date" />
 
@@ -46,16 +54,23 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/endDate"
         android:layout_below="@+id/endDate"
-        android:layout_marginTop="34dp"
         android:text="备份" />
 
-    <!-- <Button
-        android:id="@+id/button2"
+    <EditText
+        android:id="@+id/phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_marginLeft="23dp"
-        android:layout_toRightOf="@+id/button1"
-        android:text="后台运行" /> -->
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/button1"
+        android:ems="10"
+        android:inputType="phone" />
+
+    <Button
+        android:id="@+id/sendLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/phone"
+        android:layout_below="@+id/phone"
+        android:text="@string/sendlocation" />
 
 </RelativeLayout>
